--- a/sources/config-sans-lycian.yaml
+++ b/sources/config-sans-lycian.yaml
@@ -2,11 +2,12 @@ buildVariable: false
 familyName: Noto Sans Lycian
 googleFonts: true
 includeSubsets:
-  - from: Noto Sans
-    name: GF_Latin_Core
-  - from: Noto Sans
-    ranges:
-      - start: 0x205A
-        end: 0x205A
+- from: Noto Sans
+  name: GF_Latin_Core
+- from: Noto Sans
+  ranges:
+  - end: 8282
+    start: 8282
+recipeProvider: noto
 sources:
-  - NotoSansLycian.designspace
+- NotoSansLycian.designspace
